# fil-one

./: .gitignore  README.md  SECURITY.md  pnpm-lock.yaml  sst-env.d.ts  sst.config.ts
.github/workflows/: contracts-ci.yaml  dependabot-auto-merge.yml  deploy-preview.yaml  e2e-staging.yaml  packages-ci.yaml  preview-teardown.yaml  prune-lambda-versions.yaml  security.yaml  test-staging.yaml
docs/: 2026-05-13-sqs-tenant-setup-removal.md  Auth0OneTimeSetup.md  AuthOverview.md  S3Considerations.md  StripeIntegrationConsiderations.md
docs/architectural-decisions/: 2026-03-aurora-tenant-setup-workflow.md  2026-03-mfa-enrollment.md  2026-03-observability-architecture.md  2026-04-service-orchestrator-management-api.md  2026-04-subscription-drift-telemetry.md  2026-05-invoice-generation-success-rate.md  2026-05-passkey-primary-authentication.md  2026-05-synchronous-tenant-setup-on-first-resource.md
tests/e2e/destructive/: auth.setup.ts  buckets.spec.ts  login.spec.ts  logout.spec.ts
tests/integration/jobs/: helpers.ts  subscription-drift-checker.test.ts  usage-reporting-worker.test.ts
tests/s3compat/: README.md  compatibility_test.py  console_presign_test.py  load_test.py  pyproject.toml  test_descriptions.yaml
tests/s3compat/lib/: backend_loader.py  client.py  descriptions.py  logger.py  manifest.py  report.py
tests/s3compat/lib/backend-aurora/: __init__.py  patch.py  portal_api.py
tests/s3compat/templates/: report.md.j2
tests/s3compat/tools/: aurora_key_management.py  create_bucket.py  delete.py  fetch.py  generate_ceph_conf.py  upload.py
